--- a/web/components/TeamDashboard/AdvancedL10Metrics.module.scss
+++ b/web/components/TeamDashboard/AdvancedL10Metrics.module.scss
@@ -3,7 +3,7 @@
 
 .metrics {
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
 }
 
 .metricsHeader {
@@ -16,8 +16,7 @@
 
   h4 {
     margin: 0;
-    font-size: 1.1rem;
-    font-weight: 600;
+    font-size: 1rem;
     color: #ffffff;
   }
 }
@@ -75,10 +74,10 @@
   background: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 8px;
-  padding: 0.3rem 1rem;
+  padding: 0.5rem 1rem;
 
   h5 {
-    margin: 0 0 0.5rem 0;
+    margin: 0 0 0.25rem 0;
     font-size: 0.9rem;
     font-weight: 700;
     color: #07aae2;
